# nes-esp32-emulator

./: .gitignore  BINARIES_BUILD_SUCCESS.md  CHECKLIST.md  CMAKE_AND_UNITTEST_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  EPIC_JOURNEY.md  ESP32_BUILD_SUCCESS.md  GITHUB_PUSH_GUIDE.md  GITHUB_SUCCESS.md  GIT_COMMIT_SUCCESS.md  PLATFORMIO_COMPLETE.md  PLATFORMIO_PATH_PERMANENT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SUCCESS.md  TEST_RESULTS.md  VERIFICATION_COMPLETE.md  platformio.ini
.github/workflows/: ci.yml
data/: README.txt
docs/: BUILD.md  PLATFORMIO_PATH_FIX.md  PLATFORMIO_SETUP.md  PLATFORMIO_SSL_FIX.md  PLATFORMIO_WORKFLOW.md  TESTING.md  VS2022_PLATFORMIO.md  VS2022_QUICK_REFERENCE.md  VS2022_WORKFLOW_DIAGRAM.md
include/: cpu_6502.h  nes.h  ppu.h
lib/: TFT_eSPI_Config.h
scripts/: build_all_binaries.ps1  build_and_test.ps1  build_and_test.sh  build_esp32.ps1  fix_pio_path.ps1  fix_pio_path_permanent.ps1  github_quick_commands.sh  pio.ps1  pio_manager.ps1  pio_manager.py  push_to_github.ps1
src/: cpu_6502.cpp  main.cpp  nes.cpp  ppu.cpp
test/: CMakeLists.txt  README.md  platformio_test_README.md  test_cpu_6502.cpp  test_main.cpp  test_nes.cpp  test_ppu.cpp
